# sauter-university-2025-challenge

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: main.yml
src/: main.py
src/adapters/: bq_bucket_adapter.py  gcs_bucket_adapter.py
src/core/decorators/: logging.py
src/core/exceptions/: handle_exceptions.py
src/core/factory/: providers.py
src/interfaces/: bq_adapter.py  bucket_adapter.py
src/routers/: bq.py  bucket.py
src/schemas/: bucket.py
src/services/: bigquery.py  bucket.py
src/utils/: data_utils.py
terraform/: main.tf  outputs.tf  resources.tf  variables.tf
